<resources>
    <string name="app_name">LesCalc</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">&#8722;</string>
    <string name="divide">&#247;</string>
    <string name="multiply">&#215;</string>
    <string name="equals">=</string>
    <string name="delete">CE</string>
    <string name="dot">.</string>

</resources>